--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU 
-eske tu veux sortir avec moi coche la bonne réponse
-<INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui<BR>
-<INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui<BR>
-  <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui<BR>
+<html>
+  <head>
+    <link rel="icon" href="favicon.ico" />
+  </head>
+  <body>
+  BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
+  eske tu veux sortir avec moi coche la bonne réponse <br>
+  <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
+  <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
+  </body>
+</html>
