--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="icon" href="favicon.ico" />
+    <title>Jtm lolo</title>
   </head>
   <body>
   BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
