--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Jtm lolo</title>
   </head>
   <body>
-  BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
-  eske tu veux sortir avec moi coche la bonne réponse <br>
-  <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
-  <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
+    <p style="font-size:30px; font-family:'Comic Sans MS'">BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
+      eske tu veux sortir avec moi coche la bonne réponse <br>
+      <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
+      <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
+    </p>
   </body>
 </html>
