--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>Jtm lolo</title>
   </head>
   <body>
-    <p style="font-size:30px; font-family:'Comic Sans MS'">BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
+    <p style="font-size:30px">BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
       eske tu veux sortir avec moi coche la bonne réponse <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
+      <img src="stitch bg.png">
     </p>
   </body>
 </html>
