--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       eske tu veux sortir avec moi coche la bonne réponse <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
-      <img src="stitch bg.png">
+      <img src="bgstitch.png">
     </p>
   </body>
 </html>
