--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>Jtm lolo</title>
   </head>
   <body>
+    <script src="confetti.js"></script>
     <p style="font-size:30px">BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
       eske tu veux sortir avec moi coche la bonne réponse <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
       <img src="bgstitch.png">
+      <button class="btn btn-info">appuie ici mdr</button>
     </p>
   </body>
 </html>
