--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   </head>
   <body>
     <script src="confetti.js"></script>
-    <button class="btn btn-info">appuie ici mdr</button>
     <p style="font-size:30px">BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
       eske tu veux sortir avec moi coche la bonne réponse <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
+      <button onclick="stopConfetti();">appuie ici mdr</button>
       <img src="bgstitch.png">
     </p>
   </body>
