--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
       <button onclick="stopConfetti();">appuie ici mdr</button>
-      <img src="bgstitch.png">
+      <img src="bgstitch.png"><br>
     </p>
   </body>
 </html>
