--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       eske tu veux sortir avec moi coche la bonne réponse <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
-      <button onclick="stopConfetti();">appuie ici mdr</button>
-      <img src="bgstitch.png"><br>
+      <button onclick="stopConfetti();">appuie ici mdr</button><br>
+      <img src="bgstitch.png">
     </p>
   </body>
 </html>
