--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       eske tu veux sortir avec moi coche la bonne réponse <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
-      <button onclick="stopConfetti();">appuie ici mdr</button><br>
+      <button onclick="stopConfetti();" class="btn btn-info">appuie ici mdr</button><br>
       <img src="bgstitch.png">
     </p>
   </body>
