--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <link rel="icon" href="favicon.ico" />
     <title>Jtm lolo</title>
+    <link href="https://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/darkly/bootstrap.min.css">
   </head>
   <body>
     <p style="font-size:30px">BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
