--- a/index.html
+++ b/index.html
@@ -410,10 +410,12 @@ document.addEventListener("DOMContentLoaded", function() {
 });
     </script>
     <canvas height='1' id='confetti' width='1'></canvas>
-    <p style="font-size:30px">BON ANNIVERSASIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU <br>
+    <p style="font-size:30px">BON ANNIVERSAIRE LAURIE DAMOUR QUE JE T4AIME VRAIMENT BOCOU++<br>
       eske tu veux sortir avec moi coche la bonne réponse <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
+      (mdr c déjà ta pa le choient) <br>
+	dedikasse a lilou<br>
       <img src="bgstitch.png">
       <script src="confetti.js"></script>
     </p>
