--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ document.addEventListener("DOMContentLoaded", function() {
       eske tu veux sortir avec moi coche la bonne réponse <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu1" CHECKED>oui <br>
       <INPUT TYPE="radio" NAME= "bg" VALUE="menu2">oui <br>
-      (mdr c déjà ta pa le choient) <br>
+      (mdr pa le choient) <br>
 	dedikasse a lilou<br>
       <img src="bgstitch.png">
       <script src="confetti.js"></script>
