--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-JOYEU HALLOWEEEEN !!!!!! 
-<form action="lol.html">
-    <input type="submit" value="mdr je dec appuie ici bg" />
-</form>
+En construction
